# rs-rapid

./: .gitignore  Cargo.toml  README.md  build.rs
.circleci/: config.yml
.circleci/builder/: Dockerfile
proto/: remoting.proto
src/: errors.rs  lib.rs  membership.rs  transport.rs
src/membership/: broadcasting.rs  cut_detector.rs  fastpaxos.rs  mod.rs  view.rs
