[package]
name = "rs-rapid"
version = "0.1.0"
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "^0.6"
bytes = "^0.4"
error-chain = "^0.12"
uuid = { version = "^0.7", features = ["serde", "v4", "v3"] }
tower-grpc = { version = "^0.1", features = ["tower-hyper"] }
tower-hyper = "^0.1"
hyper = "^0.12"
tower-service = "^0.2"
tower-util = "^0.1"
prost = "^0.5"
log = "^0.4"
twox-hash = "^1.4"

[dev-dependencies]
spectral = "*"
env_logger = "^0.6"

[build-dependencies]
tower-grpc-build = { version = "^0.1",  features = ["tower-hyper"] }
prost-build = "^0.5"

