[package]
name = "rs-rapid"
version = "0.1.0"
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^0.4"
error-chain = "^0.12"
uuid = { version = "^0.7", features = ["serde", "v4", "v3"] }
prost = "^0.5"
log = "^0.4"
twox-hash = "^1.4"
tokio = "0.1.22"
futures = "^0.1"
env_logger = "^0.6"
ctrlc = "^3.1"
grpcio = { git="https://github.com/pingcap/grpc-rs", features=["prost-codec", "secure"] }

[dev-dependencies]
spectral = "*"

[build-dependencies]
prost-build = "^0.5"
grpcio-compiler = { git="https://github.com/pingcap/grpc-rs", features=["prost-codec"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
